log

Thu 14 Mar 2024 08:25:54 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
d0f3528
Thu 14 Mar 2024 08:36:27 PM UTC: 
 exercises.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 47 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:71:10: error: function returns address of local variable [-Werror=return-local-addr]
   71 |   return arr_par;
      |          ^~~~~~~
exercises.c:67:14: error: array subscript <unknown> is outside array bounds of ‘int[<Ucc60>]’ [-Werror=array-bounds]
   67 |       arr_par[*newSize] = arr[i];
      |       ~~~~~~~^~~~~~~~~~
exercises.c:54:7: note: while referencing ‘arr_par.64’
   54 |   int arr_par[total];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
087a7d9
